--- a/securityBoard/src/main/resources/templates/showComment.html
+++ b/securityBoard/src/main/resources/templates/showComment.html
@@ -11,16 +11,8 @@
         <div id="mainHide">
  
         		<table class="table table-hover">
-<!--         			<thead>
-        				<tr>
-        					<th scope="col">아이디</th>
-        					<th scope="col">댓글</th>
-        					<th scope="col">작성일</th>
-        					
-        				</tr>
-        			</thead> -->
+
         			<tbody>
-        			<!-- http://localhost:9090/board?id=2 -->
         				<tr th:each="com:${comList}">
         					<td>
         					<span style="font-size: 18px;" th:text="${com.users.username}"></span>
@@ -42,22 +34,22 @@
     <script > 
  	 function delComment(a){
  		 var id=a;
- 		 alert(id); 
+ 		 //alert(id); 
  		 var comDel={commentId:id,
 	  			 boardIdNo:$('#comment_board').val()};
  		 
- 		 alert(comDel);
+ 		 //alert(comDel);
  		  
             $.ajax({
                        url: "/deleteCom/",
                        data:comDel,
                        type: "DELETE",
                        success: function (data) {	//data 내가 지정 변수이름. 컨트롤러에서 모든 과정을 끝마치고 성공하면 success로 data에 값이 담겨져서 넘어온다.
-                           alert('삭제 성공!');
+                           alert('댓글 삭제 성공!');
                            $('#show').html(data);
                        },   
                        error: function () {
-                           alert('삭제 실패!');
+                           alert('댓글 삭제 실패!');
                        }
                    });
         };
