--- a/securityBoard/src/main/resources/templates/onelist.html
+++ b/securityBoard/src/main/resources/templates/onelist.html
@@ -96,10 +96,10 @@
                 <td></td>
             </tr>
         </table>
-        <div align="right" class="pull-left" align="right">
+        <div align="right" class="pull-left" >
             <a href="/list" class="btn btn-default">목록으로</a>
         </div>
-        <div class="pull-right">
+        <div align="right" class="pull-right">
         		<!-- ! 되어있는건 노출.. 그래서 저장만 보여 수정,삭제는 안보임. 
         		!${board?.id} 아이디가 없으면 insert
         		${board?.id} 아이디가 있으니까 업데이트, 딜리트 -->
